initial maven indexer implementation
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>