@@ -1,3 +1,7 @@
+@file:Suppress("UnstableApiUsage")
+
+import ca.solostudios.nyx.util.soloStudios
+import com.github.jengelman.gradle.plugins.shadow.internal.JavaJarExec
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 plugins {
@@ -6,74 +10,77 @@ plugins {
     `maven-publish`
     alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.kotlin.kapt)
-    alias(libs.plugins.shadow)
+    alias(libs.plugins.dokka)
     alias(libs.plugins.ksp)
+    alias(libs.plugins.shadow)
+    alias(libs.plugins.nyx)
 }
 
-group = "ca.solo-studios.reposilite"
-version = "0.0.0"
+nyx {
+    info {
+        name = "Reposilite Maven Indexer"
+        group = "ca.solo-studios"
+        module = "reposilite-maven-indexer"
+        version = "0.1.0"
+
+        license.useMIT()
+    }
+
+    compile {
+        withJavadocJar()
+        withSourcesJar()
+
+        allWarnings = true
+        distributeLicense = true
+        reproducibleBuilds = true
+        jvmTarget = 17
+
+        kotlin {
+            apiVersion = "2.0"
+            languageVersion = "2.0"
+
+            withExplicitApi()
+        }
+    }
+}
 
 repositories {
-    maven("https://maven.solo-studios.ca/releases/")
-    // mavenLocal()
+    soloStudios()
     mavenCentral()
-    maven("https://maven.reposilite.com/maven-central")
     maven("https://maven.reposilite.com/releases")
-
-    maven("https://maven.reposilite.com/snapshots") {
-        mavenContent {
-            snapshotsOnly()
-        }
-    }
 }
 
-java {
-    withJavadocJar()
-    withSourcesJar()
-}
-
-kapt {
-    useBuildCache = false
-}
-
-kotlin {
-    explicitApi()
-    target {
-        compilations.configureEach {
-            kotlinOptions {
-                jvmTarget = "11"
-                apiVersion = "1.7"
-                languageVersion = "1.7"
-            }
-        }
-    }
+val reposilite by configurations.register("reposilite") {
+    isCanBeResolved = true
+    isCanBeConsumed = false
+    isCanBeDeclared = false
+    isTransitive = false
+    // configurations.runtimeOnly.configure { extendsFrom(this@register) }
 }
 
 dependencies {
-    // ksp shit
+    compileOnly(libs.kotlin.stdlib)
+
+    implementation(libs.kotlinx.datetime)
+
     compileOnly(libs.ksp.service)
     ksp(libs.ksp.service)
 
-    shadow(libs.reposilite)
     compileOnly(libs.reposilite)
-
-    shadow(libs.bundles.kotlin.base)
-    compileOnly(libs.bundles.kotlin.base)
+    reposilite(variantOf(libs.reposilite) { classifier("all") })
 
     implementation(libs.maven.indexer)
     implementation(libs.bundles.lucene)
 
-    // idk magic shit here
-    shadow(libs.javalin.openapi.plugin)
-    kapt(libs.javalin.openapi.plugin)
+    compileOnly(libs.javalin.openapi.plugin)
+    kapt(libs.javalin.openapi.processor)
 
     testImplementation(libs.bundles.junit)
     testImplementation(libs.bundles.kotlin.test)
 }
 
 application {
-    // mainClass.set("ca.solostudios.reposilite.mvnindexer.MavenIndexerPlugin")
-    mainClass.set("com.reposilite.ReposiliteLauncherKt")
+    mainClass = "com.reposilite.ReposiliteLauncherKt"
 }
 
 tasks {
@@ -86,10 +93,23 @@ tasks {
         // destinationDirectory.set(buildDir.resolve("run/plugins/"))
         mergeServiceFiles()
 
-        // minimize()
+        manifest {
+            attributes("Multi-Release" to "true") // lucene breaks without this
+        }
+
+        metaInf {
+
+        }
+
+        dependencies {
+            exclude(dependency("javax.inject:javax.inject"))
+            exclude(dependency("org.slf4j:slf4j-api"))
+            exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib"))
+            exclude(dependency("org.jetbrains:annotations"))
+        }
     }
 
-    val runDir = buildDir.resolve("run")
+    val runDir = layout.buildDirectory.dir("run")
 
     val prepRun by creating(Copy::class) {
         dependsOn(shadowJar)
@@ -97,15 +117,28 @@ tasks {
         from(shadowJar.archiveFile) {
             rename { "reposilite-maven-indexer-plugin.jar" }
         }
-        into(runDir.resolve("plugins"))
+        into(runDir.map { it.dir("plugins") })
     }
 
-    withType<JavaExec> {
+    named<JavaJarExec>("runShadow") {
         dependsOn(prepRun)
+        jarFile = reposilite.resolve().single()
 
-        classpath(configurations.shadow)
+        jvmArguments.addAll(
+            "--enable-native-access=ALL-UNNAMED",
+            "--add-modules=jdk.incubator.vector",
+        )
 
         workingDir(runDir)
         standardInput = System.`in`
     }
+
+    // named<JavaExec>("run") {
+    //     dependsOn(prepRun)
+    //
+    //     classpath(configurations.shadow, configurations.runtimeClasspath)
+    //
+    //     workingDir(runDir)
+    //     standardInput = System.`in`
+    // }
 }
